changes color, but has alignment issue

--- a/src/Components/SubComponents/AboutUs/AboutUs.css
+++ b/src/Components/SubComponents/AboutUs/AboutUs.css
@@ -1,10 +1,10 @@
-.homepage_about {
+/* .homepage_about {
     background-color: #C38888;
     padding-left: 10rem;
     padding-right: 10rem;
     height: 100vh;
     overflow-y: hidden;
-}
+} */
 
 .about {
     background-color: black;
