--- a/src/Components/SubComponents/Associates/Associates.css
+++ b/src/Components/SubComponents/Associates/Associates.css
@@ -1,10 +1,9 @@
-.homepage_associates {
+/* .homepage_associates {
     background-color: #C18C5D;
     padding-left: 10rem;
     padding-right: 10rem;
     height: 100%;
-    /* overflow-y: hidden; */
-}
+} */
 
 .associates {
     background-color: black;
