--- a/src/Components/SubComponents/Commitment/Commitment.css
+++ b/src/Components/SubComponents/Commitment/Commitment.css
@@ -1,10 +1,10 @@
-.homepage_commitment {
+/* .homepage_commitment {
     background-color: #99A751;
     padding-left: 10rem;
     padding-right: 10rem;
     height: 100vh;
     overflow-y: hidden;
-}
+} */
 
 .commitment {
     background-color: black;
