--- a/src/Components/SubComponents/ContactUs/ContactUs.css
+++ b/src/Components/SubComponents/ContactUs/ContactUs.css
@@ -1,12 +1,10 @@
-.homepage_contact {
+/* .homepage_contact {
     background-color: #938A9E;
     padding-left: 10rem;
     padding-right: 10rem;
-    /* padding-top: 4rem; */
     height: 100vh;
     overflow-y: scroll;
-
-}
+} */
 
 .contact {
     background-color: black;
