--- a/src/Components/SubComponents/Experience/Experience.css
+++ b/src/Components/SubComponents/Experience/Experience.css
@@ -1,10 +1,10 @@
-.homepage_experience {
+/* .homepage_experience {
     background-color: #A9ABA6;
     padding-left: 10rem;
     padding-right: 10rem;
     height: 100vh;
     overflow-y: hidden;
-}
+} */
 
 .experience {
     background-color: black;
