--- a/src/Components/SubComponents/Expertise/Expertise.css
+++ b/src/Components/SubComponents/Expertise/Expertise.css
@@ -1,10 +1,10 @@
-.homepage_expertise {
+/* .homepage_expertise {
     background-color: #97A77E;
     padding-left: 10rem;
     padding-right: 10rem;
     height: 100vh;
     overflow-y: hidden;
-}
+} */
 
 .expertise {
     background-color: black;
