--- a/src/Components/SubComponents/WhatWeDo/WhatWeDo.css
+++ b/src/Components/SubComponents/WhatWeDo/WhatWeDo.css
@@ -1,10 +1,10 @@
-.homepage_whatwedo {
+/* .homepage_whatwedo {
     background-color: #7496B6;
     padding-left: 10rem;
     padding-right: 10rem;
     height: 100%;
     overflow-y: hidden;
-}
+} */
 
 .whatwedo {
     background-color: black;
